# human-edge-finder

./: LICENSE  README.md  pyproject.toml  test-skills.txt
.github/workflows/: ci.yml
src/human_edge_finder/: __init__.py  analyzer.py  cli.py  domains.py  formatter.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_domains.py  test_formatter.py
